--- a/Plugins/Plugins/packages.config
+++ b/Plugins/Plugins/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="8.2.0.2" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net461" />    
-</packages>         
+  <package id="Microsoft.CrmSdk.CoreTools" version="9.0.0.7" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net461" />
+  <package id="spkl" version="1.0.370" targetFramework="net461" />
+</packages>
